fixed logo and added logo behind modal on take survey page

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -14,10 +14,7 @@
 
 #body {
   background-image: url('../images/gorilla.jpg');
-  
-    /*rgba(21, 105, 199,.8);*/
-  margin-top: 60px;
-  padding-top: 80px;
+  padding-top: 30px;
   padding-bottom: 600px;
 
 }
@@ -121,4 +118,7 @@ h5 {
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.49);
   -webkit-font-smoothing: antialiased;
 }
+
+.gorilla {
+  background-image: url('../images/gorilla.jpg');
 }
